# cookiecutter-pylib

./: README.md  cookiecutter.json
{{ cookiecuter.project_slug }}/: .editorconfig  README.md  pyproject.toml
{{ cookiecuter.project_slug }}/src/{{ cookiecutter.module_name }}/: __init__.py  __main__.py
